# SciLink

./: .gitignore  CLAUDE.md  Dockerfile  Dockerfile.scilink_mdanalysis  MANIFEST.in  PR_structure_matching.md  README.md  interactive_planning_orchestrator.py  pyproject.toml  raman_data.txt  raman_metadata.json  requirements.txt  test_adaptive_annealing_llm.py  test_bo_agent.py  test_bo_agent2.py  test_verification_fixes.py
.devcontainer/: Dockerfile  devcontainer.json
docs/: claude_code_integration.md  constraint_annealing.md  custom_tools_integration.md  hyperspectral_codegen_relocation.md  mcp_client_integration.md
examples/: README.md  run_benchmark_suite.py  run_breakage_benchmark.py  run_e2e_pipeline.py
examples/data/: YBCO_tem.json  polycrystalline_grains.json  polycrystalline_grains.npy
examples/mlip/: deploy_example.py
examples/planning_agent_demo/: README.md
examples/routing/: route_demo.py
examples/vasp/: benchmark_suite.py
scilink/: __init__.py  auth.py  executors.py  knowledge.py  mcp_client.py  mcp_server.py  providers.py  tracing.py
scilink/agents/exp_agents/: __init__.py  _deprecation.py  _locked_exec.py  analysis_orchestrator.py  analysis_orchestrator_tools.py  atomistic_microscopy_agent.py  base_agent.py  central_microscopy_agent.py  curve_fitting_agent.py  dft_recommender.py  experimental_orchestrator.py  experimental_orchestrator_tools.py  feature_table.py  fft_microscopy_agent.py  human_feedback.py  hyperspectral_analysis_agent.py  image_analysis_agent.py  instruct.py  metadata_converter.py  microscopy_agent.py  orchestrator_agent.py  pipeline_selector.py  preprocess.py  quality_gate.py  recommendation_agent.py  sam_microscopy_agent.py  utils.py
scilink/agents/lit_agents/: literature_agent.py  novelty_scorer.py  optimize_query.py  optimize_query_for_analysis.py
scilink/agents/meta_agent/: __init__.py  meta_orchestrator.py  meta_orchestrator_tools.py  telemetry.py
scilink/agents/planning_agents/: __init__.py  _deprecation.py  base_agent.py  bo_agent.py  bo_tools.py  digest.txt  excel_parser.py  html_generator.py  ingestor.py  instruct.py  knowledge_base.py  orchestrator_tools.py  parser_utils.py  planning_agent.py  planning_orchestrator.py  planning_rag.py  rag_engine.py  scalarizer_agent.py  user_interface.py
scilink/agents/sim_agents/: __init__.py  _ase_runner.py  _deprecation.py  _potential.py  base_agent.py  cluster_executor.py  critics.py  dft_orchestrator.py  ems_agent.py  force_field_agent.py  instruct.py  lammps_agent.py  lammps_analysis.py  lammps_analysis_updater.py  lammps_orchestrator.py  lammps_updater.py  lammps_utils.py  md_simulation_agent.py  md_workflow.py  mlip_agent.py  packmol_agent.py  periodic_dft_agent.py  post_run_analysis.py  refinement.py  simulation_orchestrator.py  simulation_orchestrator_tools.py  simulation_pipeline.py  simulation_router.py  skill_graduation.py  structure_agent.py  structure_orchestrator.py  structure_pipeline.py  structure_planner.py  tools.py  utils.py  val_agent.py  vasp_agent.py  vasp_input_validator.py  vasp_quality.py  vasp_updater.py
scilink/agents/skills/: __init__.py
scilink/cli/: __init__.py  analyze.py  main.py  memory.py  meta.py  plan.py  prepare_ff.py  serve.py  simulate.py  ui.py
scilink/hpc/: __init__.py  batch.py  connection.py  probe.py  scheduler.py
scilink/knowledge/: __init__.py  knowledge_base.py  rag_engine.py  synthesis.py
scilink/parsers/: __init__.py  excel_parser.py  extract.py  ingestor.py  ocr.py  pdf_parser.py
scilink/skills/: loader.py
scilink/tools/: _registry.py  _spec.py  amber_tools.py  atom_finding_tools.py  atomistic_tools.py  bo_tools.py  curve_fitting_tools.py  fft_nmf.py  hdf5_utils.py  hyperspectral_tools.py  image_processor.py  particle_analyzer.py  sam.py
scilink/ui/: _features.py  app.py  config.py  state.py  theme.py
scilink/utils/: available_software.py  codegen_parse.py  curve_preview.py  file_prep.py  synthesis_parse.py
scilink/workflows/: dft_recommendation_workflow.py  dft_workflow.py  experiment2dft.py  experiment_novelty_workflow.py
scilink/wrappers/: __init__.py  google_wrapper.py  google_wrapper_embeddings.py  litellm_wrapper.py  openai_wrapper.py
tests/: test_adaptive_annealing.py  test_backend_registration.py  test_bo_convergence.py  test_cif_index.py  test_cluster_executor.py  test_credential_prefill.py  test_curve_fitting_orient_and_adapt.py  test_ems_agent.py  test_ems_workflow.py  test_epr_axial_powder.py  test_knowledge_query.py  test_lit_planner_injection.py  test_lit_query_optimizer.py  test_md_agent_smoke.py  test_mlip_agent_smoke.py  test_mp_resolver.py  test_multiskill_autoselect_live.py  test_orchestrator_routing_tool.py  test_parallel_fanout.py  test_persistent_memory.py  test_pipeline_refinement_integration.py  test_planning_campaigns.py  test_quality_gate.py  test_refinement_loop.py  test_scalarizer_sandbox.py  test_score_match_robust.py  test_simulation_orchestrator.py  test_simulation_router.py  test_skill_graduation.py  test_skill_loader.py  test_skill_selector.py  test_structure_backends.py  test_structure_matching_tools.py  test_vasp_syntax.py
tests/test_amber_skill/: test_agent_amber_pipeline.py  test_amber_tools.py  test_skill_loading.py
tests/test_lammps_skill/: conftest.py  test_lammps_tools.py  test_skill_loading.py
(+84 files in other folders)
