[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scilink"
version = "0.0.17"
authors = [
  { name="SciLink Team", email="maxim.ziatdinov@gmail.com" },
]
description = "LLM-powered agents for scientific research automation"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
keywords = [
    "materials science", "computational modeling", "machine learning",
    "large language models", "generative AI", "microscopy", "spectroscopy",
    "density functional theory", "atomic simulation", "experimental analysis",
    "literature mining"
]
dependencies = [
    "litellm>=1.80.16",
    "atomai>=0.8.1",
    "edison-client>=0.7.6",
    "gdown>=5.2.0",
    "faiss-cpu>=1.12.0",
    "pymupdf>=1.26.5",
    "pdfplumber>=0.11.7",
    "pandas>=2.3.3",
    "openpyxl>=3.1.5",
    "tabulate>=0.9.0",
    "botorch>=0.16.1",
    "lmfit>=1.3.4"
]

[project.optional-dependencies]
sim = [
    "ase>=0.8.5",
    "aimsgb>=1.1.1",
    "atomate2>=0.0.21",
    "mdanalysis>=2.9.0",
]
ui = [
    "streamlit>=1.37.0",
]
mcp = [
    "mcp>=1.0.0",
]
all = [
    "scilink[sim]",
    "scilink[ui]",
    "scilink[mcp]",
]

[project.urls]
"Homepage" = "https://github.com/scilink/scilink"
"Bug Tracker" = "https://github.com/scilink/scilink/issues"

[project.scripts]
scilink = "scilink.cli.main:main"
scilink-workflows = "scilink.cli.workflows:main"
scilink-agent = "scilink.cli.run_agent:main"
scilink-ui = "scilink.cli.ui:main"

# Third-party packages can advertise custom analysis agents here.
# SciLink discovers these automatically on startup via importlib.metadata.
# Example entry in a third-party pyproject.toml:
#   [project.entry-points."scilink.agents"]
#   my_xrd_agent = "my_package.agents:MyXRDAgent"
[project.entry-points."scilink.agents"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"scilink" = ["agents/sim_agents/docs/*.txt", "agents/sim_agents/docs/*.md", "ui/.streamlit/*.toml", "ui/assets/*.svg"]
